--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>Stranka</title>
 
     <link rel="stylesheet" href="./css/menu_bar.css">
+    <link rel="stylesheet" href="./css/main_image.css">
+    <link rel="stylesheet" href="./css/brand_slider.css">
 </head>
 <body>
-    <div class="navbar">
+    <nav class="navbar">
         <div class="nav">
             <div class="logo">Logo</div>
             <a href="#home">Tenisky</a>
@@ -21,7 +23,24 @@
             <div class="profil">PROFIL </div>
             <div class="kosik last">KOSIK </div>
         </div>
-    </div>
+    </nav>
+    
+    <section class="main_image_section">
+        <div class="main_image_placeholder"></div>
+    </section>
+
+    <section class="brand_slider_section">
+        <div class="brand_slider_placeholder">
+            <div class="brand_slider_image"></div>
+            <div class="brand_slider_image"></div>
+            <div class="brand_slider_image"></div>
+            <div class="brand_slider_image"></div>
+            <div class="brand_slider_image"></div>
+        </div>
+        
+    </section>
+
     <div style="height:1000px ;"></div>
+    <script src="./javascript/slider_moj.js"></script>
 </body>
 </html>
