pridany slider, banner so ponukami

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/menu_bar.css">
     <link rel="stylesheet" href="./css/main_image.css">
     <link rel="stylesheet" href="./css/brand_slider.css">
+    <link rel="stylesheet" href="./css/banner_hlavna_ponuka.css">
 </head>
 <body>
     <nav class="navbar">
@@ -30,16 +31,27 @@
     </section>
 
     <section class="brand_slider_section">
-        <div class="brand_slider_placeholder">
-            <div class="brand_slider_image"></div>
-            <div class="brand_slider_image"></div>
-            <div class="brand_slider_image"></div>
-            <div class="brand_slider_image"></div>
-            <div class="brand_slider_image"></div>
+        <div class="brand_slider_mechanism">
+            <div class="brand_slider_placeholder">
+                <div class="brand_slider_image" style="background-color: aqua;"> 1</div>
+                <div class="brand_slider_image" >2</div>
+                <div class="brand_slider_image" >3</div>
+                <div class="brand_slider_image" >4</div>
+                <div class="brand_slider_image" >5</div>
+                <div class="brand_slider_image" >6</div>
+                <div class="brand_slider_image" >7</div>
+                <div class="brand_slider_image" >8</div>
+            </div>
         </div>
-        
     </section>
 
+    <section class="banner_hlavna_ponuka">
+        <div class="banner_hlavna_ponuka_container">
+            <a href="#tenisky" class="tenisky_banner" > <div> TENISKY</div> </a>
+            <a href="#kopacky" class="kopacky_banner"> <div > KOPACKY</div> </a>
+            <a href="#lopty" class="lopty_banner"> <div > LOPTY</div> </a>
+        </div>
+    </section>
     <div style="height:1000px ;"></div>
     <script src="./javascript/slider_moj.js"></script>
 </body>
