--- a/zoznam_produktov.html
+++ b/zoznam_produktov.html
@@ -387,15 +387,15 @@
                                 <h3>Cena</h3>
                                 
                                 <div class="min_max_filter">
-                                    <input type="number" class="minPrice" value="0" min="10" max="1000"/>
-                                    <input type="number" class="maxPrice" value="1000" min="10" max="1000"/>
+                                    <input type="number" class="min_price" value="0" min="10" max="1000"/>
+                                    <input type="number" class="max_price" value="1000" min="10" max="1000"/>
                                 </div>
-                                <div class="slider-container">
-                                    <span class="slider-track"></span>
-                                    <div class="filled-track" id="filledTrack"></div>
-                                    <input type="range" class="minSlider" data-value="minPrice" min="0" max="1000" value="0" step="20">
-                                    <input type="range" class="maxSlider" data-value="maxPrice" min="0" max="1000" value="1000" step="20">
-                                    <div class="tooltip"></div>
+                                <div class="slider_container">
+                                    <span class="slider_track"></span>
+                                    <div class="filled_track" id="filled_track"></div>
+                                    <input type="range" class="min_slider" data-value="min_price" min="0" max="1000" value="0" step="20">
+                                    <input type="range" class="max_slider" data-value="max_price" min="0" max="1000" value="1000" step="20">
+                                    
                                 </div>
 
 
