--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/brand_slider.css">
     <link rel="stylesheet" href="./css/banner_hlavna_ponuka.css">
     <link rel="stylesheet" href="./css/product_slider.css">
+    <link rel="stylesheet" href="./css/newsletter.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" />
@@ -90,7 +91,7 @@
             </div>
         </section>
 
-        <div class="label"> Adidas botasky</div>
+        <div class="label"> Adidas botaski</div>
         <section class="product_slider">
             <div class="slider-container">
                 <!-- <div class="customNavigation"><a class="btn prev"><i class="fa fa-caret-left"></i></a><a class="btn next"><i class="fa fa-caret-right"></i></a></div> -->
@@ -106,6 +107,16 @@
         </section>
     </section>
 
+    <section class="newsletter">
+        <div class="newsletter_obsah">  
+            <div class="newsletter_label"> Prihlas sa na newsletter bratu </div>
+            <div class="newsletter_button_input">
+                <input class="newsletter_input" />
+                <button class="prihlasit_button"> Prihlasit sa </button>
+            </div>
+            
+        </div>
+    </section>
 
 
     <div style="height:1000px ;"></div>
