--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./css/banner_hlavna_ponuka.css">
     <link rel="stylesheet" href="./css/product_slider.css">
     <link rel="stylesheet" href="./css/newsletter.css">
+    <link rel="stylesheet" href="./css/fotokolaz.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" />
@@ -114,8 +115,27 @@
                 <input class="newsletter_input" />
                 <button class="prihlasit_button"> Prihlasit sa </button>
             </div>
-            
         </div>
+    </section>
+
+    <section class="fotokolaz_section">
+        <div class="fotokolaz">
+            <div class="grid-container">
+                <div class="obr"></div>
+                <div class="obr"></div>
+                <div class="obr"></div>
+                <div class="obr"></div>
+                <div class="obr"></div>
+                <div class="obr"></div>
+                <div class="obr"></div>
+                <div class="obr"></div>
+                <div class="obr"></div>
+                <div class="obr"></div>
+                <div class="obr"></div>
+                <div class="obr"></div>
+            </div>
+        </div>
+        
     </section>
 
 
