--- a/index.html
+++ b/index.html
@@ -146,7 +146,9 @@
         
     </section>
 
-    <section class="footer_asi">
+    <div style="height:1000px ;"></div>
+
+    <footer class="footer_asi">
         <div class="footer_container">
             <div class="obchod_info">
                     <div class="obchod">
@@ -201,14 +203,16 @@
                     <div class="footer_text"> Blog </div>
                     <div class="footer_text"> Kontakt </div>
                     <div class="footer_text">  > </div>
+                    <br>
+                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-x-twitter"></i>
+                    <i class="fa-brands fa-linkedin-in"></i>
                 </div>
             </div>
         </div>
-        
-    </section>
+    </footer>
 
-
-    <div style="height:1000px ;"></div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="javascript/product_slider.js"></script>
