responzivna hlavna stranka

--- a/index.html
+++ b/index.html
@@ -147,6 +147,8 @@
 
     <div style="height:1000px ;"></div>
 
+
+
     <footer class="footer_asi">
         <div class="footer_container">
             <div class="obchod_info">
@@ -203,10 +205,12 @@
                     <div class="footer_text"> Kontakt </div>
                     <div class="footer_text">  > </div>
                     <br>
+                    <!-- <i class="fa-brands fa-linkedin-in"></i> -->
+                </div>
+                <div class="footer_social">
                     <i class="fa-brands fa-facebook-f"></i>
                     <i class="fa-brands fa-instagram"></i>
                     <i class="fa-brands fa-x-twitter"></i>
-                    <i class="fa-brands fa-linkedin-in"></i>
                 </div>
             </div>
         </div>
