--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="nav">
             <ul class="menu">
                 <li class="main_category" id="tenisky">
-                    <a href="#Tenisky">Tenisky</a>
+                    <a href="zoznam_produktov.html">Tenisky</a>
                     <ul class="dropdown-menu dropdown-menuTENISKY">
                         <li class="inside_category">
                             <span class="inside_category_name"><a href="#panskeTenisky"> Pánske tenisky </a></span>
@@ -89,7 +89,7 @@
                     </ul>
                 </li>
                 <li class="main_category">
-                    <a href="#Oblecenie">Oblecenie</a>
+                    <a href="zoznam_produktov.html">Oblecenie</a>
                     <ul class="dropdown-menu dropdown-menuOBLECENIE">
                         <li class="inside_category">
                             <span class="inside_category_name"><a href="#panskeTenisky"> MUŽI </a></span>
@@ -136,7 +136,7 @@
                     </ul>
                 </li>
                 <li class="main_category">
-                    <a href="#Lopty">Doplnky</a>
+                    <a href="zoznam_produktov.html">Doplnky</a>
                     <ul class="dropdown-menu dropdown-menuDOPLNKY">
                         <div class="doplnky_placeholder">
                             <li class="inside_category">
@@ -163,7 +163,7 @@
                         </div>
                     </ul>
                 </li>
-                <li class="main_category"><a href="#Vypredaj">Výpredaj</a></li>
+                <li class="main_category"><a href="vypredaj.html">Výpredaj</a></li>
             </ul>
 
         </div>
